Kinda tricky but I think I made it too complicated. Took me a couple of reads to get a grasp of what "relative" is relative to. Saw a very short you tube video just showing boxes being moved around on a page. Static was the default, where the item would be in the page flow. Static does not let you use left-right-top-bottom to position, it is where it is in pageflow. Relative was relative to where it would be in the normal page flow, and allowed you to use top-bottom-left-right to position.  The other two are outside of pageflow.Absolute was like using an x-y axis to pinpoint a location on the web page, but top-bottom-left-right instead of x-y. Fixed is the same thing, but it is 'fixed' to the browser window instead of the web page. Also read about something called a z-axis that lets you overlap images and I'll get to that.

--- a/11/global.css
+++ b/11/global.css
@@ -1,1 +1,21 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
+
+.icon_text {
+
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-left: 5px;
+  margin-top: 10px;
+}
+
+img {
+
+  /*float:left;*/
+  position:relative;
+  top: 5px;
+  left: 5px;
+}
+
+
